fixed css grid break in sunpage

--- a/pages/sunPage/sun CSS.css
+++ b/pages/sunPage/sun CSS.css
@@ -3,6 +3,11 @@
       -moz-box-sizing: border-box;
       margin: 0;
       padding: 0;
+
+       /*Page Debugger
+      background: #000 !important;
+      color: #0f0 !important;
+      outline: solid #f00 1px !important;*/
     }
 
 
@@ -1473,8 +1478,8 @@
     /*Header*/
     h5.sunBanner.\32 {
       margin-top: 7.0rem;
-      /*16px*/
-
+      width: fit-content;
+      left: 37%;
     }
 
 
@@ -1609,9 +1614,9 @@
 
     /*Header*/
     h5.sunBanner.\33 {
-      margin-top: 7.0rem;
-      /*16px*/
-
+      margin-top: 7rem;
+      width: fit-content;
+      left: 37%;
     }
 
     .introSunBG-Image.\33 {
@@ -2423,16 +2428,18 @@
 
       .introSunBG-Image.\31 {
         /*Photo 1 Edits */
-        left: -23vw;
+        left: -27vw;
         height: 90vh;
         width: 125vw;
         min-width: 135%;
+
+        
       }
 
       .sunpromoWrap.\31 {
         /*  Text  */
         top: 43vh;
-        left: 65.5%;
+        left: 62.5%;
       }
 
       a.sunPhotoBtn.\31 {
@@ -2447,6 +2454,8 @@
 
       h5.sunBanner.\31 {
         margin-top: 0rem;
+        left: 30%;
+        width: fit-content;
       }
 
       .sunColumn {
@@ -2485,7 +2494,7 @@
       /***       Lacuna Photo (Round)    -  section5      //        Lacuna Products (Colm)    -  section6                   ***/
 
       .introSunBG-Image.\32 {
-        left: -9vw;
+        left: -20vw;
         height: 90vh;
         width: 114vw;
 
@@ -2495,7 +2504,7 @@
       .sunpromoWrap.\32 {
         /*  Text  */
         top: 44vh;
-        left: 71.5vw;
+        left: 61.5vw;
       }
 
       a.sunPhotoBtn.\32 {
@@ -2568,12 +2577,16 @@
       /***                        Locations    -     section9                           ***/
       .titleSec {
         top: 0%;
+        left: 43%;
+        width: fit-content;
       }
 
       .findLocat {
         /*    Button  Sec   */
         top: 3%;
+        left: 28%;
         margin-top: 0rem;
+        width: fit-content;
       }
 
       div#locateBtn1 {
@@ -3497,6 +3510,7 @@
       h5.sunBanner.\31 {
         /*Adjustment*/
         margin-top: 0rem;
+        left: -1%;
       }
 
 
@@ -3574,6 +3588,7 @@
       /*Header*/
       h5.sunBanner.\32 {
         margin-top: 7.0rem;
+        left: 10%;
       }
 
 
@@ -3621,7 +3636,7 @@
       h5.sunBanner.\33 {
         /*Header*/
         margin-top: 7.0rem;
-
+        left: 12%;
       }
 
       .introSunBG-Image.\33 {
